Replace `Arrays.asList` and `Collections.emptyList` with `List.of` and `Set.of` for cleaner and consistent collections usage